# luanti-vita

.github/workflows/: psvita.yml
psvita/: CMakeLists.txt  README.md
psvita/cmake/: FindVitaLibs.cmake  FindvitaGL.cmake  VitaSources.cmake
psvita/livearea/sce_sys/livearea/contents/: template.xml
psvita/scripts/: apply_patches.sh  build.sh  game_vita.patch  irr_sdl_vita.patch  porting_h_vita.patch  porting_vita.patch  root_CMakeLists.patch
psvita/src/: vita_audio.cpp  vita_audio.h  vita_compat.cpp  vita_compat.h  vita_debug.cpp  vita_debug.h  vita_fs.cpp  vita_fs.h  vita_input.cpp  vita_input.h  vita_irr_driver.cpp  vita_main.cpp  vita_network.cpp  vita_network.h  vita_platform.cpp  vita_platform.h  vita_prefix.h  vita_settings_defaults.cpp  vita_settings_defaults.h  vita_thread.cpp  vita_thread.h
